# Marauder

catkin_ws/src/multiple-object-tracking-lidar/src/: main.cpp  main_naive.cpp
catkin_ws/src/teleop_keyboard/: package.xml
catkin_ws/src/teleop_keyboard/launch/: driver_keyboard.launch
catkin_ws_marauder/src/marauder/: CMakeLists.txt  package.xml
catkin_ws_marauder/src/marauder_2dnav/: CMakeLists.txt  package.xml  robot.urdf
catkin_ws_marauder/src/marauder_2dnav/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
catkin_ws_marauder/src/marauder_2dnav/launch/: marauder_configuration.launch  move_base.launch
catkin_ws_marauder/src/marauder_2dnav/map/: myMap2.yaml
catkin_ws_marauder/src/marauder_nav_rviz/: CMakeLists.txt  map_config.rviz  package.xml
catkin_ws_marauder/src/motor_control/: CMakeLists.txt  package.xml
catkin_ws_marauder/src/motor_control/src/: driver.cpp  driver.h  marauder.cpp  marauder.h
catkin_ws_marauder/src/odometry_publisher/: package.xml
catkin_ws_marauder/src/odometry_publisher/src/: odometry_publisher.cpp
catkin_ws_marauder/src/sick_scan/launch/: sick_tim_5xx.launch
catkin_ws_marauder/src/simple_nav_goals/: CMakeLists.txt  package.xml
catkin_ws_marauder/src/teleop_keyboard/: CMakeLists.txt
catkin_ws_marauder/src/teleop_keyboard/src/: teleop_keyboard.py
catkin_ws_marauder/src/tuto_tf/: CMakeLists.txt  package.xml
catkin_ws_marauder/src/tuto_tf/src/: laser_scan_publisher.cpp  tf_broadcaster.cpp
rosvid_ws_marauder/src/vidsrv/: CMakeLists.txt  package.xml
rosvid_ws_marauder/src/vidsrv/launch/: vidsrv.launch
